// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PermissionSelector /> should render with empty permissions 1`] = `
<div>
  <div
    className="Tabs-sc-1hzj2zf-0 izkieo"
    id="permissionSelectorTabs"
  >
    <ul
      className="nav nav-tabs"
      role="tablist"
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          aria-controls="permissionSelectorTabs-pane-1"
          aria-selected={true}
          href="#"
          id="permissionSelectorTabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
        >
          Streams
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-controls="permissionSelectorTabs-pane-2"
          aria-selected={false}
          href="#"
          id="permissionSelectorTabs-tab-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          Dashboards
        </a>
      </li>
    </ul>
    <div
      className="tab-content"
    >
      <div
        aria-hidden={false}
        aria-labelledby="permissionSelectorTabs-tab-1"
        className="tab-pane active"
        id="permissionSelectorTabs-pane-1"
        role="tabpanel"
      >
        <div
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <div>
            <div
              className="row"
            >
              <div
                className="col-md-12"
              >
                <div
                  className="filter"
                >
                  <form
                    className="form-inline"
                    onSubmit={[Function]}
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                        htmlFor="filter-streams-data-filter"
                      >
                        Filter Streams
                      </label>
                      <div
                        className="typeahead-wrapper"
                      >
                        <input
                          className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                          id="filter-streams-data-filter"
                          label="Filter Streams"
                          name="filter-streams-data-filter"
                          placeholder=""
                          type="text"
                        />
                        
                      </div>
                    </div>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={false}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="submit"
                    >
                      Filter
                    </button>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={true}
                      onClick={[Function]}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="button"
                    >
                      Reset
                    </button>
                  </form>
                  <ul
                    className="pill-list"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                className="list-group"
              >
                <span
                  className="listGroupHeader ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="form-group-inline"
                    >
                      <div
                        className="checkbox"
                      >
                        <label
                          title=""
                        >
                          <input
                            checked={false}
                            disabled={false}
                            label="Select all"
                            name="select-all-checkbox"
                            onChange={[Function]}
                            placeholder=""
                            type="checkbox"
                          />
                          Select all
                        </label>
                      </div>
                      
                    </div>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      stream1
                    </span>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      stream2
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="permissionSelectorTabs-tab-2"
        className="tab-pane"
        id="permissionSelectorTabs-pane-2"
        role="tabpanel"
      >
        <div
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <div>
            <div
              className="row"
            >
              <div
                className="col-md-12"
              >
                <div
                  className="filter"
                >
                  <form
                    className="form-inline"
                    onSubmit={[Function]}
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                        htmlFor="filter-dashboards-data-filter"
                      >
                        Filter Dashboards
                      </label>
                      <div
                        className="typeahead-wrapper"
                      >
                        <input
                          className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                          id="filter-dashboards-data-filter"
                          label="Filter Dashboards"
                          name="filter-dashboards-data-filter"
                          placeholder=""
                          type="text"
                        />
                        
                      </div>
                    </div>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={false}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="submit"
                    >
                      Filter
                    </button>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={true}
                      onClick={[Function]}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="button"
                    >
                      Reset
                    </button>
                  </form>
                  <ul
                    className="pill-list"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                className="list-group"
              >
                <span
                  className="listGroupHeader ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="form-group-inline"
                    >
                      <div
                        className="checkbox"
                      >
                        <label
                          title=""
                        >
                          <input
                            checked={false}
                            disabled={false}
                            label="Select all"
                            name="select-all-checkbox"
                            onChange={[Function]}
                            placeholder=""
                            type="checkbox"
                          />
                          Select all
                        </label>
                      </div>
                      
                    </div>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      dashboard1
                    </span>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      dashboard2
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionSelector /> should render with set permissions 1`] = `
<div>
  <div
    className="Tabs-sc-1hzj2zf-0 izkieo"
    id="permissionSelectorTabs"
  >
    <ul
      className="nav nav-tabs"
      role="tablist"
    >
      <li
        className="active"
        role="presentation"
      >
        <a
          aria-controls="permissionSelectorTabs-pane-1"
          aria-selected={true}
          href="#"
          id="permissionSelectorTabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
        >
          Streams
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-controls="permissionSelectorTabs-pane-2"
          aria-selected={false}
          href="#"
          id="permissionSelectorTabs-tab-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
        >
          Dashboards
        </a>
      </li>
    </ul>
    <div
      className="tab-content"
    >
      <div
        aria-hidden={false}
        aria-labelledby="permissionSelectorTabs-tab-1"
        className="tab-pane active"
        id="permissionSelectorTabs-pane-1"
        role="tabpanel"
      >
        <div
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <div>
            <div
              className="row"
            >
              <div
                className="col-md-12"
              >
                <div
                  className="filter"
                >
                  <form
                    className="form-inline"
                    onSubmit={[Function]}
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                        htmlFor="filter-streams-data-filter"
                      >
                        Filter Streams
                      </label>
                      <div
                        className="typeahead-wrapper"
                      >
                        <input
                          className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                          id="filter-streams-data-filter"
                          label="Filter Streams"
                          name="filter-streams-data-filter"
                          placeholder=""
                          type="text"
                        />
                        
                      </div>
                    </div>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={false}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="submit"
                    >
                      Filter
                    </button>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={true}
                      onClick={[Function]}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="button"
                    >
                      Reset
                    </button>
                  </form>
                  <ul
                    className="pill-list"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                className="list-group"
              >
                <span
                  className="listGroupHeader ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="form-group-inline"
                    >
                      <div
                        className="checkbox"
                      >
                        <label
                          title=""
                        >
                          <input
                            checked={false}
                            disabled={false}
                            label="Select all"
                            name="select-all-checkbox"
                            onChange={[Function]}
                            placeholder=""
                            type="checkbox"
                          />
                          Select all
                        </label>
                      </div>
                      
                    </div>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-info active"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      stream1
                    </span>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-info active"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      stream2
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden={true}
        aria-labelledby="permissionSelectorTabs-tab-2"
        className="tab-pane"
        id="permissionSelectorTabs-pane-2"
        role="tabpanel"
      >
        <div
          style={
            Object {
              "marginTop": 10,
            }
          }
        >
          <div>
            <div
              className="row"
            >
              <div
                className="col-md-12"
              >
                <div
                  className="filter"
                >
                  <form
                    className="form-inline"
                    onSubmit={[Function]}
                    style={
                      Object {
                        "display": "inline",
                      }
                    }
                  >
                    <div
                      className="form-group"
                    >
                      <label
                        className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
                        htmlFor="filter-dashboards-data-filter"
                      >
                        Filter Dashboards
                      </label>
                      <div
                        className="typeahead-wrapper"
                      >
                        <input
                          className="FormControl-sc-1amoaox-0 hdNTyr form-control"
                          id="filter-dashboards-data-filter"
                          label="Filter Dashboards"
                          name="filter-dashboards-data-filter"
                          placeholder=""
                          type="text"
                        />
                        
                      </div>
                    </div>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={false}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="submit"
                    >
                      Filter
                    </button>
                    <button
                      className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                      disabled={true}
                      onClick={[Function]}
                      style={
                        Object {
                          "marginLeft": 5,
                        }
                      }
                      type="button"
                    >
                      Reset
                    </button>
                  </form>
                  <ul
                    className="pill-list"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                className="list-group"
              >
                <span
                  className="listGroupHeader ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="form-group"
                  >
                    <div
                      className="form-group-inline"
                    >
                      <div
                        className="checkbox"
                      >
                        <label
                          title=""
                        >
                          <input
                            checked={false}
                            disabled={false}
                            label="Select all"
                            name="select-all-checkbox"
                            onChange={[Function]}
                            placeholder=""
                            type="checkbox"
                          />
                          Select all
                        </label>
                      </div>
                      
                    </div>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      dashboard1
                    </span>
                  </div>
                </span>
                <span
                  className="ListGroupItem__StyledListGroupItem-sc-1ky0joo-0 THrbj list-group-item"
                >
                  <div
                    className="itemWrapper "
                  >
                    <div
                      className="itemActionsWrapper"
                    >
                      <div
                        className="btn-group btn-group-sm"
                      >
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-info active"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow reading
                        </button>
                        <button
                          className="Button__StyledButton-c9cbmb-0 kRDLih btn btn-default"
                          disabled={false}
                          onClick={[Function]}
                          type="button"
                        >
                          Allow editing
                        </button>
                      </div>
                    </div>
                    <div
                      className="form-group"
                    >
                      <div
                        className="form-group-inline"
                      >
                        <div
                          className="checkbox"
                        >
                          <label
                            title=""
                          >
                            <input
                              checked={false}
                              disabled={false}
                              label=""
                              name="id-checkbox"
                              onChange={[Function]}
                              placeholder=""
                              type="checkbox"
                            />
                            
                          </label>
                        </div>
                        
                      </div>
                    </div>
                    <span
                      className="description"
                    >
                      dashboard2
                    </span>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
